- 27/08/2022
51. base/pw_comp.c: use AUTH methods definition from authmethods.h
52. base/strerr_die.c: BUG: added missing substdio output for argument 16
- 28/08/2022
53. base/makesalt.c: add missing terminating '$' character for salt
54. base/mkpasswd.c: allow variable salt size using environment variable
    SALTSIZE
55. base/makesalt.c: return -1 for insufficient length

* Sat Jul 17 2021 18:14:37 +0000 Manvendra Bhangui <libqmail@indimail.org> 1.1-1.1%{?dist}
Release 1.1 Start 14/02/2021
======= Release Highlights ================================================
o added date822fmt, pathexec_run, pathexec_env, envdir, makeargs, mktempfile
  cdbmss, token822, openreadclose, prot_uid, prot_gid functions to libqmail
o added glibc wrappers for qgetpwent, setpwent, endpwent, qgetpwent_r,
  qgetpwnam, qgetpwuid, qgetpwnam_r, qgetpwuid_r, qgetgrent, qsetgrent,
  qendgrent, qgetgrnam, qgetgrgid, qgetgrnam_r, qgetgrgid_r,
  qgetservent, qgetservbyname, qgetservbyport, qsetservent, qendservent,
  qgetservent_r, qgetservbyname_r, qgetservbyport_r
o envdir: complete recode. Added hyperlink feature to link another directory
  to the main directory. Added ability to read multiple directories using
  .envdir and key=value pairs from .envfile 
===========================================================================
- 03/03/2021
01. timeoutread, timeoutwrite - fix data types
- 17/03/2021
02. Open Build Service integration
- 18/04/2021
03. added date822fmt() and date822fmt.h
- 03/05/2021
04. added timestamp() function
05. uint16.h, uint32.h1, uint32.h2: fixed function prototype and warning
    -Warray-parameter
- 04/05/2021
06. Removed linking libqmail with openssl library
- 12/05/2021
07. added pathexec_run.c, pathexec_env.c, pathexec.h
- 13/05/2021
08. added envdir.c, envdir.h, dirent.h
- 22/05/2021
09. added evaluate.c, evaluate.h, for evaluate()
- 26/05/2021
10. qprintf: pad with zeros for numbers
- 29/05/2021
11. configure.ac: define SYSCONFDIR for leapsecs.dat