@@ -91,6 +91,8 @@ o added libc replacements qgetservent, qgetservbyname, qgetservbyport along
 54. base/mkpasswd.c: allow variable salt size using environment variable
     SALTSIZE
 55. base/makesalt.c: return -1 for insufficient length
+- 29/08/2022
+56. base/envdir.c: BUG: advance to next line for blank lines/comments
 
 * Sat Jul 17 2021 18:14:37 +0000 Manvendra Bhangui <libqmail@indimail.org> 1.1-1.1%{?dist}
 Release 1.1 Start 14/02/2021
